12 July 2018: Wouter
	- Fix to improve systemd socket activation code file descriptor
	  assignment.

10 July 2018: Wouter
	- Note in documentation that the cert name match code needs
	  OpenSSL 1.1.0 or later to be enabled.

6 July 2018: Wouter
	- Fix documentation ambiguity for tls-win-cert in tls-upstream and
	  forward-tls-upstream docs.
	- iana port update.
	- Note RFC8162 support.  SMIMEA record type can be read in by the
	  zone record parser.
	- Fix round robin for failed addresses with prefer-ip6: yes

4 July 2018: Wouter
	- Fix #4112: Fix that unbound-anchor -f /etc/resolv.conf will not pass
	  if DNSSEC is not enabled.  New option -R allows fallback from
	  resolv.conf to direct queries.

3 July 2018: Wouter
	- Better documentation for unblock-lan-zones and insecure-lan-zones
	  config statements.
	- Fix permission denied printed for auth zone probe random port nrs.

2 July 2018: Wouter
	- Fix checking for libhiredis printout in configure output.
	- Fix typo on man page in ip-address description.
	- Update libunbound/python/examples/dnssec_test.py example code to
	  also set the 20326 trust anchor for the root in the example code.

29 June 2018: Wouter
	- dns64-ignore-aaaa: config option to list domain names for which the
	  existing AAAA is ignored and dns64 processing is used on the A
	  record.

28 June 2018: Wouter
	- num.queries.tls counter for queries over TLS.
	- log port number with err_addr logs.

27 June 2018: Wouter
	- #4109: Fix that package config depends on python unconditionally.
	- Patch, do not export python from pkg-config, from Petr Menšík.

26 June 2018: Wouter
	- Partial fix for permission denied on IPv6 address on FreeBSD.
	- Fix that auth-zone master reply with current SOA serial does not
	  stop scan of masters for an updated zone.
	- Fix that auth-zone does not start the wait timer without checking
	  if the wait timer has already been started.

21 June 2018: Wouter
	- #4108: systemd reload hang fix.